# SETestKCL

./: CMakeLists.txt  Doxyfile  README.md
src/: Negotiation.cpp  NegotiationRecorder.cpp  NegotiationRecorder.h  _getch.h  tinyfiledialogs.c  tinyfiledialogs.h
